<resources>
    <string name="about_label_author"><![CDATA[Author: <a href="mailto:artemyankovskiy@gmail.com?subject=PhotoTools">Artem Yankovskiy</a>]]></string>
    <string name="about_label_dof">DoF-calculator</string>
    <string name="about_label_dofManual">For the calculation of the depth of field, choose the model of your camera and the aperture 
        from the lists. Point out the focal length from which shooting will be made, and also point out the focusing distance. For the 
        change of the measure units of the calculation results, press the corresponding button.</string>
    <string name="about_label_evpairs">EV Pairs</string>
    <string name="about_label_evPairsManual">The window is divided on two parts: \"Current values\" and \"New values\". All parameters of 
        the shooting, that is going on now, should be filled in \"Current values\". Desirable parameters of shooting except parameters 
        that needs to calculate are brought in window \"New values\". The field with required parameter must be choosed by taped on the header</string>
    <string name="about_label_license">License information</string>
    <string name="about_label_sunsetSunrise">Sunsets and sunrises</string>
    <string name="about_label_sunsetSunriseManual">For the calculation of the time of a sunset and sunrise for certain day, choose the 
        interesting date. For the choosing of the location which distinct from the current, choose the point \"Point on the map\" in 
        \"Location\". For the calculation, press the button \"Calculate\". For reception of the explanatory the notions \"the Navigating 
        sunrise\", \"Civil twilight\", etc, press on corresponding field in \"Result of calculations\". </string>
    <string name="about_label_sunsetMap">Map</string>
    <string name="about_label_sunsetMapManual">For the choosing of a concrete location on the map, press and keep a required point. 
        Press to \"Confirm a choice\" after occurrence of the marker on the map. 
        For the choosing a type of the map, open the menu.
        The note: the one marker can be established only.</string>
    <string name="about_label_licenseInformation"><![CDATA[<b>Photo Tools</b> is distributing under the license GPL v3. You can receive the source code of the program under the link: <a href="https://github.com/yankovskiy/PhotoTools">github.com</a>]]></string>
    <string name="about_label_version">Version:</string>
    <string name="app_name">Photo Tools</string>
    <string name="dof_label_aperture">Aperture</string>
    <string name="dof_label_calculationResult">Result of calculations</string>
    <string name="dof_label_myCameras">My cameras</string>
    <string name="dof_label_farLimit">Far limit:</string>
    <string name="dof_label_focalLength">Focal length</string>
    <string name="dof_label_hyperFocal">Hyperfocal:</string>
    <string name="dof_label_nearLimit">Near limit:</string>
    <string name="dof_label_shootingOptions">Shooting options</string>
    <string name="dof_label_subjectDistance">Focus distance</string>
    <string name="dof_label_total">Total:</string>
    <string name="dof_sc_title">Manage cameras</string>
    <string name="dof_sc_message">Select existing model or create your camera</string>
    <string name="evpairs_button_calculate">Calculate</string>
    <string name="evpairs_button_clear">Clear</string>
    <string name="evpairs_error_calculationProblem">Problem with the calculation</string>
    <string name="evpairs_error_onlyOneFieldMustBeEpmty">The one empty field can be only</string>
    <string name="evpairs_label_apperture">Aperture</string>
    <string name="evpairs_label_currentValues">Current values</string>
    <string name="evpairs_label_iso">ISO</string>
    <string name="evpairs_label_newValues">New values</string>
    <string name="evpairs_label_shutterSpeed">Shutter</string>
    <string name="locationSelection_label_currentLocation">My location</string>
    <string name="locationSelection_label_pointOnMap">Point on the map</string>
    <string name="locationSelection_label_selectLocation">Choose a location</string>
    <string name="main_button_about">About</string>
    <string name="main_button_dofcalc">DoF-calculator</string>
    <string name="main_button_donate">Full version</string>
    <string name="main_button_evpairs">EV Pairs</string>
    <string name="main_button_feedback">Feedback</string>
    <string name="main_button_rateMe">Rate</string>
    <string name="main_button_sunset">Sunsets and sunrises</string>
    <string name="main_button_plugins">Plugins</string>
    <string name="map_button_confirmSelection">Confirm a choice</string>
    <string name="map_menu_mapType_map">Map</string>
    <string name="map_menu_mapType_terrain">Terrain</string>
    <string name="map_menu_mapType_satellite">Satellite</string>
    <string name="map_menu_mapType_hybrid">Hybrid</string>
    <string name="sunset_alert_message">It isn’t possible to pick the location. Go to the settings?</string>
    <string name="sunset_alert_title">Finding of location</string>
    <string name="sunset_alert_positive">Settings</string>
    <string name="sunset_alert_negative">Cancel</string>
    <string name="sunset_button_calculate">Calculate</string>
    <string name="sunset_label_date">Date</string>
    <string name="sunset_label_location">Location</string>
    <string name="sunset_label_calculationResult">Result of calculations</string>
    <string name="sunset_label_sunrise">Sunrise:</string>
    <string name="sunset_label_sunset">Sunset:</string>
    <string name="sunset_label_astroSunrise">Astronomical sunrise:</string>
    <string name="sunset_label_astroSunset">Astronomical twilight:</string>
    <string name="sunset_label_nauticalSunrise">Nautical sunrise:</string>
    <string name="sunset_label_nauticalSunset">Nautical twilight:</string>
    <string name="sunset_label_civilSunrise">Civil sunrise:</string>
    <string name="sunset_label_civilSunset">Civil twilight:</string>
    <string name="sunset_label_timeZone">Time zone</string>
    <string name="sunset_label_auto">Auto</string>
    <string name="sunset_label_manual">Select from list</string>
    <string name="titles_emailAuthor">artemyankovskiy@gmail.com</string>
    <string name="title_activity_map">Choose a location</string>
    <string name="titles_selectEmailApplication">Choose the app for sending of email</string>
    <string name="information_title_sunrise">Sunrise</string>
    <string name="information_title_sunset">Sunset</string>
    <string name="information_title_astroSunrise">Astronomical sunrise</string>
    <string name="information_title_astroSunset">Astronomical twilight</string>
    <string name="information_title_nauticalSunrise">Nautical sunrise</string>
    <string name="information_title_nauticalSunset">Nautical twilight</string>
    <string name="information_title_civilSunrise">Civil sunrise</string>
    <string name="information_title_civilSunset">Civil twilight</string>
    <string name="information_message_sunrise">Sunrise is the phenomenon, characteristic for the rising of the sun. It is shown by 
        increase of the light exposure of the environment due to lifting of the solar disk, concerning the horizon line. The 
        phenomenon of the sunrise is opposite to the phenomenon of the sunset. These two phenomena are similar apart from the side 
        of the occurrence on the horizon.</string>
    <string name="information_message_sunset">Sunset is the disappearance aster under horizon. A sunset is often brighter, than 
        rising, and sunset has brighter red and orange tones. </string>
    <string name="information_message_astroSunrise">Astronomical sunrise is the time period before sunrise, during which the sun is at 
        the angle of elevation from -12 ° to -18 ° over horizon level. Astronomical twilight is indistinguishable from night for the 
        usual observer.</string>
    <string name="information_message_astroSunset">Astronomical twilight is the period of time after a sunset ,during which the sun 
        is at the angle of elevation from -12 ° to -18 ° over horizon level. Astronomical twilight is indistinguishable from night 
        for the usual observer.</string>
    <string name="information_message_nauticalSunrise">Nautical sunrise is the time period before sunrise, during which the sun is at 
        the angle of elevation from -6 ° to -12 ° over horizon level. The general outlines of the land objects can be distinguishable 
        under normal atmospheric conditions.</string>
    <string name="information_message_nauticalSunset">Nautical twilight is the period of time after a sunset, during which the sun is 
        at the angle of elevation from -6 ° to -12 ° over horizon level. The general outlines of land objects can be distinguishable 
        under normal atmospheric conditions.</string>
    <string name="information_message_civilSunrise">Civil sunrise is the time period before sunrise, during which the sun is at the 
        angle of elevation from 0 ° to -6 ° over horizon level. It is possible to carry out any kind of works without additional 
        illumination on open place in mainly clear or cloudless weather.</string>
    <string name="information_message_civilSunset">Civil twilight is the period of time after a sunset, during which the sun is at 
        the angle of elevation from 0 ° to -6 ° over horizon level. It is possible to carry out any kind of works without additional 
        illumination on open place in mainly clear or cloudless weather.</string>
    <string name="changelog_full_title">List of changes</string>
    <string name="changelog_title">What\'s new</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">next&#8230;</string>
    <string name="dialogConfirmCreate_checkbox_isSave">Save the location?</string>
    <string name="dialogConfirmCreate_label_locationName">Location name</string>
    <string name="dialogConfirmCreate_title">Choice confirmation</string>
    <string name="dialogConfirmCreate_message">Do you really wish choose this location?</string>
    <string name="dialogConfirmCreate_positive">Yes</string>
    <string name="dialogConfirmCreate_negative">No</string>
    <string name="dialogConfirmCreate_error_emptyLocationName">The location name cannot be empty</string>
    <string name="dialogConfirmCreate_error_alreayExist">The location with such name is already exist</string>
    <string name="deleteConfirmation_dialog_title">Delete confirmation</string>
    <string name="deleteConfirmation_dialog_message">Do you really wish remove the record \"%s\"?</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_close">Close</string>
    <string name="sunset_information_timeZoneStart">Determining of the time zone. Please, wait</string>
    <string name="sunset_information_timeZoneSuccess">The time zone is successfully picked</string>
    <string name="dof_label_measureUnit">Measure units:</string>
    <string name="dof_label_m">m</string>
    <string name="dof_label_cm">cm</string>
    <string name="dof_label_ft">ft</string>
    <string name="dof_label_in">in</string>
    <string name="dof_tab_parameters">Parameters</string>
    <string name="dof_tab_result">Results</string>
    <string name="dof_tab_camera">Camera</string>
    <string name="userCamera_label_coc">Circle of confusion</string>
    <string name="userCamera_label_resolution">Maximum resolution</string>
    <string name="userCamera_label_sensor">Sensor size</string>
    <string name="userCamera_cameraName">Camera name</string>
    <string name="userCamera_autoCalc">Automatic calculation</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="mm">mm</string>
    <string name="menu_item_search">Search</string>
</resources>