<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2013-2014 Artem Yankovskiy (artemyankovskiy@gmail.com).
      This program is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
  
      This program is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/map_action_search"
        android:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_item_search">
    </item>
    <item
        android:id="@+id/map_button_done"
        android:icon="@drawable/ic_done_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/map_button_confirmSelection"
        android:visible="false">
    </item>
    <item
        android:id="@+id/map_type_map"
        app:showAsAction="never"
        android:title="@string/map_menu_mapType_map">
    </item>
    <item
        android:id="@+id/map_type_terrain"
        app:showAsAction="never"
        android:title="@string/map_menu_mapType_terrain">
    </item>
    <item
        android:id="@+id/map_type_satellite"
        app:showAsAction="never"
        android:title="@string/map_menu_mapType_satellite">
    </item>
    <item
        android:id="@+id/map_type_hybrid"
        app:showAsAction="never"
        android:title="@string/map_menu_mapType_hybrid">
    </item>

</menu>
