<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2013-2014 Artem Yankovskiy (artemyankovskiy@gmail.com).
      This program is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
  
      This program is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dof_label_camera"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dof_label_myCameras"
            android:textColor="@color/headear" />

        <ImageView
            android:id="@+id/dof_cameraManagement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_action_camera" />
    </RelativeLayout>

    <kankan.wheel.widget.WheelView
        android:id="@+id/dof_wheel_camera"
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <TextView
        android:id="@+id/dof_label_calculationResult"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dof_label_calculationResult"
        android:textColor="@color/headear" />

    <TextView
        android:id="@+id/dof_label_measureUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="5dp"
        android:gravity="left"
        android:text="@string/dof_label_measureUnit"
        android:textSize="12sp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/grey_round_corner"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dof_label_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/left_green_button"
            android:gravity="center"
            android:text="@string/dof_label_m"
            android:textColor="#ffffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dof_label_cm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/right_stroke"
            android:gravity="center"
            android:text="@string/dof_label_cm"
            android:textColor="#ffffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dof_label_ft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/right_stroke"
            android:gravity="center"
            android:text="@string/dof_label_ft"
            android:textColor="#ffffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dof_label_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dof_label_in"
            android:textColor="#ffffffff"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dof_label_nearLimit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left"
                android:text="@string/dof_label_nearLimit"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/dof_label_nearLimitResult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#fff0f0f0"
                android:textSize="12sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dof_label_farLimit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left"
                android:text="@string/dof_label_farLimit"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/dof_label_farLimitResult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#fff0f0f0"
                android:textSize="12sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dof_label_hyperFocal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left"
                android:text="@string/dof_label_hyperFocal"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/dof_label_hyperFocalResult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#fff0f0f0"
                android:textSize="12sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dof_label_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left"
                android:text="@string/dof_label_total"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/dof_label_totalResult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#fff0f0f0"
                android:textSize="12sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dof_label_shootingOptions"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dof_label_shootingOptions"
            android:textColor="@color/headear" />

        <ImageView
            android:id="@+id/dof_limitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_action_settings" />
    </RelativeLayout>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_gravity="center_vertical"
            android:id="@+id/dof_label_aperture"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/dof_label_aperture"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_gravity="center_vertical"
            android:id="@+id/dof_label_focalLength"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/dof_label_focalLength"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_gravity="center_vertical"
            android:id="@+id/dof_label_subjectDistance"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/dof_label_subjectDistance"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:paddingBottom="10dp">

        <kankan.wheel.widget.WheelView
            android:id="@+id/dof_wheel_aperture"
            android:layout_width="70dp"
            android:layout_height="match_parent" />

        <kankan.wheel.widget.WheelView
            android:id="@+id/dof_wheel_focalLength"
            android:layout_width="100dp"
            android:layout_height="match_parent" />

        <kankan.wheel.widget.WheelView
            android:id="@+id/dof_wheel_subjectDistance"
            android:layout_width="65dp"
            android:layout_height="match_parent" />

        <kankan.wheel.widget.WheelView
            android:id="@+id/dof_wheel_measureUnit"
            android:layout_width="50dp"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>